Add function inline